@startuml
' TODO :
'  - joueur
'  - miniville
'  - monument
'  -Partie
'  - Pile_Etablissement
'  - pioche 
'  - reserve

enum Type
enum Extension
enum Couleur
class Partie
class Jeu
class Monument
class Réserve
class Joueur
class Pile_Etablissement
class Pioche
class Etablissement

enum Type{
aucun
agriculture
elevage
ressources
maritime
commerce
industrie
maraichage
entreprise
restauration
spécial
}
enum Couleur {
bleu
vert
rouge
violet
}
enum Extension {
Aucune
Marina
GreenValley
Deluxe
}

class  Partie{
 manche : int
 joueur_actif:Joueur
 num_dé :int
 jeu : Jeu
 joueurs : Joueur
 réserve : Réserve
 nb_joueurs : int
 nb_monuments :int
 nb_etablissements :int
extension : const Extension
}
Partie : +initialisation()
Partie : +distribuer()
Partie : +tour_joueur(joueur : Joueur)
Partie : +regarder_etablissements (joueur : Joueur, couleur : Couleur)
Partie : +application_regle_standard (couleur : Couleur)
Partie : +application_regle_speciale (pile_joueur : Pile)
Partie : +transaction_pièce(émetteur : Joueur, destinataire : Joueur, montant : int)
Partie : +transaction_carte(émetteur : Joueur, destinataire : Joueur, pile : Pile)
Partie : +achat_carte (joueur : Joueur, pile_réserve : Pile)

class Jeu{
-extension : Extension
-condition_de_victoire : size_t
-nb_joueurs_MAX : size_t
-nb_pile_reserve_MAX : size_t
-nb_lignes_reserve_MAX : size_t
-nb_colonnes_reserve_MAX : size_t
-nbEtablissements_Depart : size_t
-nbEtablissements : size_t {nb d'etablissements DIFFERENTS}
-nbMonuments : size_t {nb de monuments DIFFERENTS}
-liste_etablissements[] : const Etablissement* 
-liste_monuments[] : const Monument* 
{nb de monuments à construire pour gagner}
-liste_etablissements_depart[] : const Etablissement*
-nbCartes : size_t
}
Jeu : +Jeu(extension : Extension)
Jeu : +getExtension() const: Extension
Jeu : +getCondition_de_victoire() const: size_t
Jeu : +getNb_joueurs_MAX() const: size_t
Jeu : +getNb_pile_reserve_MAX() const: size_t
Jeu : +getNb_lignes_reserve_MAX() const: size_t
Jeu : +getNb_colonnes_reserve_MAX() const: size_t
Jeu : +getNbEtablissements_Depart() const: size_t
Jeu : +getNbEtablissements() const: size_t
Jeu : +getNbMonuments() const: size_t
Jeu : +getNbCartes() const: size_t
Jeu : +getMonument() const : const Monument**
Jeu : +getEtablissements() const : const Etablissement**
Jeu : +getEtablissementsDepart() const : const Etablissement** 

Jeu : +getEtablissementFromName(const string& name)const : const Etablissement* 
Jeu : +Jeu(Extension e = Extension::Aucune, const size_t& cdv = 4, size_t nbj = 4,size_t nbpr = 15, size_t nblr = 3,
Jeu : size_t nbcr = 5, size_t nbed = 2, size_t nbe = 15, size_t nbm = 4, size_t nbc = 108)
Jeu : +~Jeu()=default

Jeu : +afficher(std::ostream& f = std::cout) const : void
Jeu : +printE_D(std::ostream& f = cout) const : void
Jeu : +printE(std::ostream& f = cout) const : void
Jeu : +printM(std::ostream& f = cout) const : void


class Carte_Monument {
 -monument : *Monument
 -construit : bool
 
}
Carte_Monument : +*getMonument() const : const Monument 
Carte_Monument : +estConstruit() const:bool
Carte_Monument : +construire()
Carte_Monument : +Carte_Monument(const Monument *mo, bool construct = false)
Carte_Monument : + ~Carte_Monument() = default

abstract Monument {
 -nom : string {KEY}
 -effet : string
 -prix : int
 -nb_exemplaires : int
}
Monument : +Monument(nom : string&, effet : string&, prix : int)
Monument : +~Monument()
Monument : +getNom()
Monument : +getEffet()
Monument : +getPrix()
Monument : +getExemplaire()

class Pioche{
 -etablissements :*Pile_Etablissement[]
}

class  Réserve{
nb_lignes : int
nb_colonnes : int
Pile_Etablissement* grille[][]
}
Réserve : Réserve (jeu : Jeu&, extension : Extension)
Réserve : retirer_etablissement(etablissement : Pile_Etablissement*)

class  Joueur{
 -id : int
 -pseudo : string
 -dés : 1..2
 -dés_lancés : 1..2
 -compte : int
 -placement_StartUp : int
-Monument* monuments[nb_monuments]
-Pile_Etablissement* pileRouge[]
-Pile_Etablissement* pileBleu[]
-Pile_Etablissement* pileVert[]
-Pile_Etablissement* pileViolet[]
}
Joueur : +getNbDés()
Joueur : +getCompte()
Joueur : +getPlacement_StartUp()
Joueur : +setNbDés()
Joueur : +setCompte()
Joueur : +setPlacement_StartUp()
Joueur : +setPseudo()
Joueur : +actualiserCompte(montant:int)
Joueur : +victoire():bool
Joueur : +lancerDés() : int
Joueur : +Joueur(Extension e)
Joueur : +ajouter_etablissement(etablissement : Etablissement)
Joueur : +retirer_etablissement(etablissement : Etablissement)

class Pile_Etablissement{
 -etablissement :*Etablissement
 -effectif : int
}
Pile_Etablissement : +actualiserEffectif()

class Etablissement{
 -nom : const string {KEY}
 -effet : const string
 -couleur : Couleur
 -prix : unsigned int
 -num_de : vector<unsigned int>
 -type : Type
 -montant_effet : unsigned int
 -isSpecial : bool
 -nb_exemplaires : unsigned int
}
Etablissement : +getNom() const : string
Etablissement : +getEffet() const : string
Etablissement : +getCouleur() const : Couleur
Etablissement : +getPrix() const : unsigned int
Etablissement : +getNumDe() const : vector<unsigned int>
Etablissement : +getType() const : Type
Etablissement : +getMontant() const : unsigned int
Etablissement : +getNbExemplaires() const : unsigned int 
Etablissement : +getIsSpecial()const : bool

Etablissement : +Etablissement(nom1 : const string&, effet1 : const string&,couleur1 : Couleur,prix1 : unsigned int,
Etablissement : num_de1 : vector<unsigned int>, type1 : Type, montant_effet1 : unsigned int, isSpecial1 : bool)
Etablissement : + ~Etablissement()=default

Etablissement : +estActif(n : unsigned int) : bool
Etablissement : +estSpecial() : bool
Etablissement : +afficher(std::ostream& f= std::cout) const : virtual void
Etablissement : +operator==(Etablissement e1)const : bool
Etablissement : +operator!=(Etablissement e1)const : bool

class Etablissement_Violet{
 -payeur : bool
} 
Etablissement_Violet : +getPayeur() const : bool
'  TODO : Modifier l'ordre des types
Etablissement_Violet : +Etablissement_Violet(const string& nom1, const string& effet1, Couleur couleur1,unsigned int prix1,
Etablissement_Violet : vector<unsigned int> num_de1, Type type1,unsigned int montant_effet1,bool isSpecial1,bool payeur1);
Etablissement_Violet : +afficher(std::ostream& f= std::cout) const : void


class Etablissement_VertTE{
  -type_effet : const Type 
}
Etablissement_VertTE : +getTypeEffet() const : Type 
Etablissement_VertTE : +Etablissement_VertTE(const string& nom1, const string& effet1, Couleur couleur1,unsigned int prix1,    
Etablissement_VertTE : vector<unsigned int> num_de1, Type type1, unsigned int montant_effet1,bool isSpecial1, Type type_effet1);
Etablissement_VertTE : +afficher(std::ostream& f= std::cout) const : void



Etablissement <|-- Etablissement_Violet : "est_un"
Etablissement <|-- Etablissement_VertTE : "est_un"
Jeu "1" <--o Partie:"gère"
Réserve "1" <--o Partie:"gère"
Pioche "1" <--o Partie:"gère"
Partie "1..*" <-- "2..4" Joueur :"joue"
Jeu "1" *-- Monument
Jeu "1" *-- Etablissement
Joueur o-- "4..6" Carte_Monument
Joueur  o-- "2..*" Pile_Etablissement
Réserve o-- "15..*" Pile_Etablissement
Etablissement  "1"<-- "*" Pile_Etablissement : "est une pile d'exemplaires de"
Monument "1" <-- "*" Carte_Monument :"est un exemplaire de"
@enduml